--- a/javascript/04_web_storage/frontend/index.html
+++ b/javascript/04_web_storage/frontend/index.html
@@ -12,6 +12,6 @@
 		<input type="text" id="message" name="message"/>
 		<br/>
 		<button id="tolocal" onclick="storeToLocalStorage()">Local Storage</button>
-		<button id="tosession" onclick="storetoSessionStorage()">Session Storage</button>
+		<button id="tosession" onclick="storeToSessionStorage()">Session Storage</button>
 	</body>	
 </html>
