--- a/javascript/06_closures/frontend/index.html
+++ b/javascript/06_closures/frontend/index.html
@@ -9,5 +9,7 @@
 		<p>Test Font</p>
 		<button id="bigger">Bigger Font</button>
 		<button id="smaller">Smaller Font</button>
+		<br/>
+		<button onclick="start()">Start</button>
 	</body>
 </html>
